--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,6 @@
 @import 'partials/settings';
 @import 'partials/global';
+@import 'partials/typography';
+@import 'partials/about';
 @import 'partials/header';
+@import 'partials/pathfinder';
