--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -10,16 +10,30 @@
 body{
     min-height: 150vh;
     background: $color-dark url(../images/background.jpg) no-repeat center 0%;
-    background-size: auto 50%;
-    position: relative;
+    background-size: 100vw auto;
+    // position: relative;
+    overflow-x: hidden;
     &::after{
         content: "";
         display: block;
         position: absolute;
         top: 0;
-        height: 50%;
-        width: 100%;
-        background: linear-gradient(0deg, $color-dark 0%, rgba(255,255,255,0) 100%);
-        transform: translate(0, 30%);
+        height: 100%;
+        width: 100vw;
+        background: linear-gradient(0deg, $color-dark 0%, rgba($color-dark, 0) 100%);
+    }
+
+}
+
+
+#pages{
+    > *{
+        display: none;
+
+        &.active{
+            display: block;
+
+
+        }
     }
 }
