--- a/src/sass/partials/_pathfinder.scss
+++ b/src/sass/partials/_pathfinder.scss
@@ -1,4 +1,21 @@
 #pathfinder{
     position: relative;
     z-index: 9999;
+    height: 50vh;
+    width: 50vh;
+    .row{
+        height: 10%;
+        width: 100%;
+        position: relative;
+        .field{
+            position: relative;
+            width: 10%;
+            border: 1px solid $color-light;
+            cursor: pointer;
+
+        }
+        .chosen{
+            background-color: $color-chosen;
+        }
+    }
 }
