--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -6,6 +6,7 @@
         width: 100%;
         padding: 0;
         margin: 0 0 $base-size * 6;
+        overflow: hidden;
 
         .img-wrapper{
             padding: 0;
